Fix spacing between solutions

--- a/_scss/services/_solutions.scss
+++ b/_scss/services/_solutions.scss
@@ -48,7 +48,7 @@
   }
 
   .processlist {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 
     ol {
       list-style: none;
